--- a/public/css/style.css
+++ b/public/css/style.css
@@ -228,10 +228,11 @@ body{
 
 .card-image1{
     grid-area: image;
-    background: url("https://i.ibb.co/tZhW2mH/museum1.jpg");
+    background: url("https://i.ibb.co/fpgwNsB/ke3.jpg");
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    background-size: cover;
+    background-size: 250px 200px;
+    background-repeat: no-repeat;
 }
 
 .card-image2{
@@ -244,18 +245,20 @@ body{
 
 .card-image3{
     grid-area: image;
-    background: url("https://i.ibb.co/9bvyJDh/museum3.jpg");
+    background: url("https://i.ibb.co/QNzjQ7M/islam.jpg");
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    background-size: cover;
+    background-size: 250px 200px;
+    background-repeat: no-repeat;
 }
 
 .card-image4{
     grid-area: image;
-    background: url("https://i.ibb.co/30HxLBB/museum4.jpg");
+    background: url("https://i.ibb.co/B67Yt9q/kolonial.jpg");
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    background-size: cover;
+    background-size: 350px 200px;
+    background-repeat: no-repeat;
 }
 
 .card-text{
@@ -281,36 +284,48 @@ body{
     font-size: 28px;
 }
 
-.card-stats1{
+.card-stats1 .btn{
     grid-area: stats;
     display: grid;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     background: #14213D;
+    height: 80px;
+    text-align: center;
+    font-size: 28px;
 }
 
-.card-stats2{
+.card-stats2 .btn{
     grid-area: stats;
     display: grid;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     background: #14213D;
+    height: 80px;
+    text-align: center;
+    font-size: 28px;
 }
 
-.card-stats3{
+.card-stats3 .btn{
     grid-area: stats;
     display: grid;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     background: #14213D;
+    height: 80px;
+    text-align: center;
+    font-size: 28px;
 }
 
-.card-stats4{
+.card-stats4 .btn{
     grid-area: stats;
     display: grid;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     background: #14213D;
+    height: 80px;
+    text-align: center;
+    font-size: 28px;
 }
 
 .card-stats .stat{
