--- a/public/css/tiket.css
+++ b/public/css/tiket.css
@@ -12,8 +12,15 @@ main{
     border-radius: 6px;
     padding: 8px;
     border-color: white;
-
 }
+
+.form-select{
+    width: 100%;
+    border-radius: 6px;
+    padding: 8px;
+    border-color: white;
+}
+
 .form-group{
     width: 50%;
 }
