--- a/public/css/tiket.css
+++ b/public/css/tiket.css
@@ -143,3 +143,12 @@ h5{
     color: #14213d;
     font-family: italic;
 }
+
+.nama{
+    font-family: italic;
+}
+
+.h4{
+    
+    font-family: italic;
+}
